# hydra

./: .gitignore  Cargo.toml  hydra-module.nix  release.nix
rs/: default.nix
rs/db/: Cargo.toml
rs/db/src/: lib.rs  models.rs  schema.rs
rs/hydra/: Cargo.toml
rs/hydra/src/: lib.rs  plugin.rs
rs/hydra/src/plugin/: github_status.rs  mod.rs
rs/hydra/src/plugin/notify/: influxdb.rs  mod.rs
rs/scripts/: Cargo.toml
rs/scripts/src/: notify.rs  util.rs
rs/server/: Cargo.toml
rs/server/src/: main.rs  page.rs
rs/templates/: base.html.tera  index.html.tera  macros.html.tera  topbar.html.tera
src/hydra-queue-runner/: hydra-queue-runner.cc
