[package]
name = "hydra"
version = "0.1.0"
authors = ["jude"]
edition = "2018"

[dependencies]
db = { path = "../db" }
async-trait = "0.1.24"
futures = "0.3.4"
dirmod = "0.2.0-alpha"
log = "0.4.8"

[dependencies.reqwest]
version = "0.10.1"
features = ["stream"]

[dev-dependencies]
assert-impl = "0.1.3"
