[package]
name = "scripts"
version = "0.1.0"
authors = ["jude"]
edition = "2018"

[[bin]]
name = "hydra-notify"
path = "src/notify.rs"

[dependencies]
hydra = { path = "../hydra" }

tokio-postgres = "0.5.2"
futures = "0.3.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
clap = "2.33.0"
serde_json = "1.0.48"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.tokio]
version = "0.2.11"
features = ["macros"]
